Install headers to audacious/, not libaudclient/.

--- a/src/audacious/Makefile
+++ b/src/audacious/Makefile
@@ -1,9 +1,10 @@
-include ../../extra.mk
-
 INCLUDES = dbus.h
 CLEAN = dbus-client-bindings.h
 
 include ../../buildsys.mk
+include ../../extra.mk
+
+includesubdir = audacious
 
 dbus-client-bindings.h: ${DBUS_BINDINGS_SOURCES}
 	${DBUS_BINDING_TOOL} --mode=glib-client --prefix=audacious_rc objects.xml > $@
